# fishsense.rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
data/: fish_segmentation.npz
scripts/: tests_setup.py
src/: cv_conversion.rs  cv_convsersion.rs  fish_head_tail_detector.rs  fish_segmentation.rs  lib.rs  linalg.rs  world_point_handler.rs
src/fish/: fish_head_tail_detector.rs  fish_length_calculator.rs  fish_segmentation.rs  fish_tail_correct.rs  mod.rs
src/world_point_handlers/: mod.rs  pixel_pitch_world_point_handler.rs  view_matrix_world_point_handler.rs  world_point_handler.rs
