[package]
name = "fishsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs2 = "2.5.5"
bytes = "1.6.0"
cv-convert = { git = "https://github.com/Rottschaferanders/rust-cv-convert.git", version = "0.25.0", default-features = false, features = ["opencv_0-91", "ndarray_0-15"] }
image = "0.25.1"
ndarray = "0.15.6"
opencv = "0.91.3"
ort = "2.0.0-rc.2"
reqwest = {version = "0.12.4", features = ["blocking"]}
ndarray-stats = "0.5.1"
faer = "0.18.2"
num = "0.4.3"

[dev-dependencies]
ndarray-npy = "0.8.1"
